Update for GitHub Pages hosting

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <section class="hero">
             <h2>Automated Deployment Pipeline</h2>
             <p>This project demonstrates a simple DevOps workflow with HTML, CSS, and GitHub Actions.</p>
+            <p><strong>🚀 Now hosted on GitHub Pages!</strong></p>
         </section>
         
         <section class="features">
